--- a/package.json
+++ b/package.json
@@ -1,57 +1,31 @@
 {
-  "name": "@mapbox/tile-reduce",
-  "version": "3.2.0",
-  "description": "vector tile mapreduce",
-  "main": "src/index.js",
-  "directories": {
-    "test": "test"
-  },
+  "name": "stream-reduce",
+  "version": "1.0.0",
+  "description": "Based on Mapbox's tile-reduce, this is an extensible streaming-based map-reduce framework",
+  "main": "index.js",
   "scripts": {
-    "test": "eslint src test examples/*/*.js && tap -R spec test/test.*.js",
-    "cover": "tap test/test.*.js --cov --coverage-report=lcov",
-    "lint": "eslint src test examples/*/*.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mapbox/tile-reduce.git"
+    "url": "git+https://github.com/jenningsanderson/geometry-reconstruction.git"
   },
-  "author": "morganherlocker",
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mapbox/tile-reduce/issues"
+    "url": "https://github.com/jenningsanderson/geometry-reconstruction/issues"
   },
-  "homepage": "https://github.com/mapbox/tile-reduce",
+  "homepage": "https://github.com/jenningsanderson/geometry-reconstruction#readme",
   "dependencies": {
-    "@mapbox/mbtiles": "^0.9.0",
-    "@mapbox/tile-cover": "^3.0.2",
-    "@mapbox/vector-tile": "^1.3.0",
-    "@turf/bbox-polygon": "^3.7.3",
     "binary-split": "^1.0.3",
-    "function-rate-limit": "^1.1.0",
-    "pbf": "^3.0.5",
+    "events": "^3.0.0",
+    "fork": "^1.3.1",
+    "fs": "0.0.1-security",
+    "path": "^0.12.7",
     "queue-async": "^1.2.1",
-    "request": "^2.79.0",
+    "split": "^1.0.1",
     "stream-array": "^1.1.2",
-    "through2": "^2.0.3"
-  },
-  "devDependencies": {
-    "eslint": "^3.13.1",
-    "eslint-config-mourner": "^2.0.1",
-    "split": "^1.0.0",
-    "tap": "^9.0.3"
-  },
-  "eslintConfig": {
-    "extends": "mourner",
-    "rules": {
-      "indent": [
-        2,
-        2
-      ],
-      "camelcase": 0,
-      "space-before-function-paren": [
-        2,
-        "never"
-      ]
-    }
+    "through2": "^2.0.3",
+    "vm": "^0.1.0"
   }
 }
