--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "split": "^1.0.1",
     "stream-array": "^1.1.2",
     "through2": "^2.0.3",
+    "topojson": "^3.0.2",
     "vm": "^0.1.0"
   }
 }
