--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "events": "^3.0.0",
     "fork": "^1.3.1",
     "fs": "0.0.1-security",
+    "lodash": "^4.17.11",
     "path": "^0.12.7",
     "queue-async": "^1.2.1",
     "split": "^1.0.1",
