--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
   "name": "stream-reduce",
   "version": "1.0.0",
-  "description": "Based on Mapbox's tile-reduce, this is an extensible streaming-based map-reduce framework",
-  "main": "index.js",
+  "description": "Based on Mapbox's tile-reduce, a framework for map-reduce jobs in Node from streaming input",
+  "main": "src/index.js",
+  "dependencies": {
+    "binary-split": "^1.0.3",
+    "child_process": "^1.0.2",
+    "events": "^3.0.0",
+    "fs": "0.0.1-security",
+    "os": "^0.1.1",
+    "path": "^0.12.7",
+    "queue-async": "^1.2.1",
+    "stream-array": "^1.1.2",
+    "vm": "^0.1.0"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jenningsanderson/geometry-reconstruction.git"
+    "url": "git+https://github.com/jenningsanderson/stream-reduce.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jenningsanderson/geometry-reconstruction/issues"
+    "url": "https://github.com/jenningsanderson/stream-reduce/issues"
   },
-  "homepage": "https://github.com/jenningsanderson/geometry-reconstruction#readme",
-  "dependencies": {
-    "binary-split": "^1.0.3",
-    "events": "^3.0.0",
-    "fork": "^1.3.1",
-    "fs": "0.0.1-security",
-    "lodash": "^4.17.11",
-    "path": "^0.12.7",
-    "queue-async": "^1.2.1",
-    "split": "^1.0.1",
-    "stream-array": "^1.1.2",
-    "through2": "^2.0.3",
-    "topojson": "^3.0.2",
-    "vm": "^0.1.0"
-  }
+  "homepage": "https://github.com/jenningsanderson/stream-reduce#readme"
 }
